--- a/ClickGame.css
+++ b/ClickGame.css
@@ -3,13 +3,13 @@ html{
 }
 
 body{
-  margin: 0 auto;
-  max-width: 800px;
+  margin: 20px auto;
+  max-width: 600px;
   font-size: 16px;
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   background: #F5F5F5;
   color: #212121;
-  padding: 2em 2em;
+  padding: 2em 5em;
 }
 canvas {
   border: 1px solid #000000;
