--- a/public/ClickGame.css
+++ b/public/ClickGame.css
@@ -11,6 +11,18 @@ body{
   color: #212121;
   padding: 2em 5em;
 }
+.high_score {
+  background: #BDBDBD;
+  padding: 0.8em;
+  padding-bottom: 2em;
+}
+.high_score_name {
+  float: left;
+
+}
+.high_score_score {
+  float: right ;
+}
 canvas {
   border: 1px solid #000000;
   display: block;
